<resources>
    <string name="app_name">e-Montażysta</string>
    <string name="app_description">Odkryj innowacyjną aplikację, która usprawni zarządzanie Twoją firmą i procesami magazynowymi. Wspomóż efektywną koordynację działań, zwiększając efektywność pracy zespołu.</string>
    <string name="app_description_header">@string/app_name</string>
    <string name="logo_desc">Logo</string>
    <string name="start_button">Start</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="prompt_username">Nazwa użytkownika</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się/Zarejestruj</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="welcome">"Witaj!"</string>
    <string name="invalid_username">Niepoprawna nazwa użytkownika</string>
    <string name="invalid_password">Hasło musi mieć co najmniej 5 znaków</string>
    <string name="login_failed">"Logowanie nieudane"</string>
    <string name="action_reset_password">Zresetuj hasło</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_qrscan">Skaner</string>
    <string name="title_dashboard">Kokpit</string>
    <string name="title_settings">Ustawienia</string>
    <string name="title_tool">Narzędzie</string>
    <string name="content_description_media">content_description_media</string>
    <string name="title">title</string>
    <string name="title_warehouses">Magazyny</string>
    <string name="title_tools">Narzędzia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tool_warehouse_button">Przejdź do magazynu</string>
    <string name="no_tools_found">Nie znaleziono żadnych narzędzi.</string>
    <string name="title_releases">Wydania</string>
    <string name="stage_title">Etap</string>
    <string name="orderPrice">Cena</string>
    <string name="order_list_tile">Lista zleceń</string>
    <string name="title_orders">Zlecenia</string>
    <string name="stages_list_tile">Lista etapów</string>
    <string name="warehouses_list_title">Lista magazynów</string>
    <string name="title_stages">Etapy</string>
    <string name="add_objects_to_release_label">Dodaj elementy</string>
    <string name="add_objects_to_release_desc">Dodaje obiekty do wydania</string>
    <string name="element_quantity_label">Ilość</string>
    <string name="create_release_title">Utwórz wydanie</string>
    <string name="element_warehouse_button">Przejdź do magazynu</string>
    <string name="element_manage_button">Wydaj/zwróć element</string>
    <string name="element_order_button">Dodaj do etapu zlecenia</string>
    <string name="element_event_button">Utwórz zdarzenie elementu</string>
    <string name="element_name_text">Nazwa</string>
    <string name="element_code_text">Kod</string>
    <string name="element_unit_text">Jednostka</string>
    <string name="element_qty_of_unit_text">Ilość w jednostce</string>
    <string name="element_warehouse_text">Adres Magazynu</string>
    <string name="element_list_tile">Lista elementów</string>
    <string name="element_in_warehouses_list_title">Stan magazynowy</string>
    <string name="element_in_warehouse_details_title">Stan w magazynie</string>
    <string name="title_element">Element</string>
    <string name="add_release_to_stage_desc">otwiera ekran twórzenia wydania z poziomu etapu</string>
    <string name="create_release_label">Wydaj elementy</string>
    <string name="content_description_profile_picture">Zdjęcie profilowe</string>
    <string name="notifications_list_title">Powiadomienia</string>
    <string name="readAll_button_text">Oznacz wszystkie jako odczytane</string>
    <string name="readall_button_title">readAll</string>
    <string name="filter_button_title">Filtruj</string>
    <string name="filter_button_text">Ustawia filtry</string>
    <string name="events_list_tile">Usterki</string>
    <string name="event_details_title">Usterka narzędzia</string>
    <string name="title_events">Usterki</string>
    <string name="filter_name_field_label">Nazwa</string>
    <string name="filter_status_field_label">Status</string>
    <string name="filter_createdDateFilter_field_label">Czas utworzenia od</string>
    <string name="filter_title">Filtry narzędzi</string>
    <string name="filter_code_field_label">Kod</string>
    <string name="filter_warehouse_field_label">Magazyny: </string>
    <string name="tool_details_title">Narzędzie</string>
    <string name="warehouse_details_title">Magazyn</string>
    <string name="release_details_title">Wydanie</string>
    <string name="release_item_name_label">Przedmiot</string>
    <string name="release_release_time_label">Data wydania</string>
    <string name="release_return_date_label">Data zwrotu</string>
    <string name="release_recaived_by_label">Odebrane przez</string>
    <string name="release_released_by_label">Wydane przez</string>
    <string name="release_demand_ad_hoc_label">Zapotrzebowanie ad-hoc</string>
    <string name="release_stage_label">Etap</string>
    <string name="release_return_objects_label_desc">Zwraca elementy z danego wydania</string>
    <string name="release_return_objects_label">Zwróć</string>
    <string name="empty_field">Brak</string>
    <string name="order_title">Zlecenie</string>
    <string name="create_return_title">Utwórz zwrot</string>
    <string name="user_first_name">Imię</string>
    <string name="user_details_title">Pracownik</string>
    <string name="title_users">Pracownicy</string>
    <string name="elements_title">Lista wydawanych przedmiotów:</string>
    <string name="confirm_button">Zatwierdź</string>
    <string name="return_items_list_label">Lista zwracanych przedmiotów</string>
</resources>
