<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?colorSurfaceVariant"
    >
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/filter_title"/>
        
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_name_field_label"
        android:paddingStart="@dimen/list_item_space_x3"
        android:paddingEnd="@dimen/list_item_space_x6">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/statusFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_status_field_label"
        android:paddingStart="@dimen/list_item_space_x3"
        android:paddingEnd="@dimen/list_item_space_x6">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/createdDateFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_createdDateFilter_field_label"
        android:paddingStart="@dimen/list_item_space_x3"
        android:paddingEnd="@dimen/list_item_space_x6">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>