<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.e_montaysta.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_toolsFragment2"
            app:destination="@id/toolsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_qrscan"
        android:name="com.example.e_montaysta.ui.qrscan.QRScanFragment"
        android:label="@string/title_qrscan"
        tools:layout="@layout/fragment_qrscan" />


    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.e_montaysta.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/toolsFragment"
        android:name="com.example.e_montaysta.ui.tools.ToolsFragment"
        android:label="fragment_tools"
        tools:layout="@layout/fragment_tools" />
</navigation>