<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ElementFragment"
    android:padding="8dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/element_back"
        android:enabled="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        app:icon="@drawable/baseline_arrow_back_ios_24"
        app:iconPadding="0dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/element_notifications"
        android:enabled="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        app:icon="@drawable/baseline_notifications_24"
        app:iconPadding="0dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_element"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/element_back"
        android:textSize="36dp"
        />

    <LinearLayout
        android:id="@+id/element_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_name"
        >
        <TextView
            android:id="@+id/element_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element_name_text"
            android:textColor="#96C0FB" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/element_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element_code_text"
            android:textColor="#96C0FB"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/element_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element_unit_text"
            android:textColor="#96C0FB"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/element_qty_of_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element_qty_of_unit_text"
            android:textColor="#96C0FB"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>